deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts: []
      secretName: ctf-certificate
  rules:
    - host: ctf.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ctf-ui
                port:
                  name: http
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: ctf-frontend
                port:
                  name: http
          #- path: /TermproxyService/
          #  pathType: Prefix
          #  backend:
          #    service:
          #      name: ctf-termproxy
          #      port:
          #        number: 1235
